@@ -117,7 +117,7 @@ class TC_BinaryTreeTest < Test::Unit::TestCase
     assert(@left_child1.isLeftChild?, "left_child1 should be the left child")
     assert(!@right_child1.isLeftChild?, "left_child1 should be the left child")
 
-    assert(!@root,isLeftChild?, "Root is neither left child nor right")
+    assert(!@root.isLeftChild?, "Root is neither left child nor right")
   end
 
   def test_isRightChild?
@@ -126,11 +126,14 @@ class TC_BinaryTreeTest < Test::Unit::TestCase
 
     assert(@right_child1.isRightChild?, "right_child1 should be the right child")
     assert(!@left_child1.isRightChild?, "right_child1 should be the right child")
-    assert(!@root,isRightChild?, "Root is neither left child nor right")
+    assert(!@root.isRightChild?, "Root is neither left child nor right")
   end
 end
 
 # $Log$
+# Revision 1.4  2007/07/19 02:03:57  anupamsg
+# Minor syntax correction.
+#
 # Revision 1.3  2007/07/19 02:02:12  anupamsg
 # Removed useless files (including rdoc, which should be generated for each release.
 #
